--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.1.6",
     "@angular/platform-browser-dynamic": "^6.1.6",
     "@angular/router": "^6.1.6",
+    "@auth0/angular-jwt": "^2.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.0",
